<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/browseImageViewLayout"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_login">

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textColor="#ffffff"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:text="-ABOUT US-"
            android:textSize="22dp"
            android:id="@+id/browseCampaignsTxt"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/browseCampaignsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff"
            android:fontFamily="impact"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="Find campaigns in your local community, or start one yourself!"
            android:gravity="center_horizontal"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relCmptxt"
        android:layout_below="@+id/browseImageViewLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="It all started with"
            android:id="@+id/campaign"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_below="@+id/relCmptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:layout_marginLeft="15dp"
        android:textColor="#FF0000"
        android:fontFamily="impact"
        android:textStyle="bold"
        android:text="a fishing pole and a GoPro Camera."
        android:id="@+id/checkout"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/checkout"
        android:background="#F5F5F5"
        android:gravity="center_horizontal"
        >
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="12dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="25dp"
                android:fontFamily="corbel">
                <!--Opelika, Al-->
                <TextView
                    android:id="@+id/txt1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/abtTxt"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/img1"
                    android:layout_height="90dp"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/txt1"
                    android:layout_toLeftOf="@+id/txt2"
                    android:src="@drawable/kyle"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt1"
                    android:textColor="#000000"
                    android:layout_toRightOf="@+id/txt1"
                    />
                <TextView
                    android:id="@+id/txt3"
                    android:layout_below="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt2"
                    android:textColor="#000000"
                    android:layout_marginTop="14dp"
                    />
                <TextView
                    android:id="@+id/txt4"
                    android:layout_below="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt3"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <!--Why Not Make a Wish or Grant one?-->
                <TextView
                    android:id="@+id/txt5"
                    android:layout_below="@+id/txt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt4"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:id="@+id/txt6"
                    android:layout_below="@+id/txt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt5"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/txt7"
                    android:layout_below="@+id/txt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt6"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/txt8"
                    android:layout_below="@+id/txt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt7"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <!--How It All Started-->
                <TextView
                    android:id="@+id/txt9"
                    android:layout_below="@+id/txt8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt8"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:id="@+id/txt10"
                    android:layout_below="@+id/txt9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt9"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/txt11"
                    android:layout_below="@+id/txt10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt10"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/txt12"
                    android:layout_below="@+id/txt11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt11"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/txt13"
                    android:layout_below="@+id/txt12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtTxt12"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    />



            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>