<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/relHelpLayout"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_login">

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:textColor="#ffffff"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:text="-Help &amp; Support-"
            android:textSize="26dp"
            android:id="@+id/browseCampaignsTxt"
            android:gravity="center"/>
        <!--
        <TextView
            android:layout_below="@+id/browseCampaignsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff"
            android:fontFamily="impact"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="Find campaigns in your local community, or start one yourself!"
            android:gravity="center_horizontal"/>
         -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_below="@+id/relHelpLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Need "
            android:id="@+id/recent"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:textColor="#000000"
            />

        <TextView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Help"
            android:id="@+id/helpTxt"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:layout_toRightOf="@id/recent"
            android:textColor="#FF0000"/>

        <TextView
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="\?"
            android:id="@+id/qTxt"
            android:fontFamily="impact"
            android:textStyle="bold"
            android:layout_toRightOf="@id/helpTxt"
            android:textColor="#000000"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relLayout1"
        android:background="#F5F5F5"
        android:gravity="center_horizontal"
        android:fontFamily="corbel"
        >
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="12dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            android:layout_gravity="center_horizontal">
            <!--Opelika, Al-->
            <TextView
                android:id="@+id/txt1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/help_num"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:autoLink="all"
                />
            <TextView
                android:id="@+id/txt2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_email"
                android:textColor="#000000"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:autoLink="all"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/support_txt"
                android:textColor="#6D6D6D"
                android:layout_below="@+id/txt2"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>